--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,15 @@ tasks.withType(JavaCompile) {
 dependencies {
   compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
+  implementation 'org.apache.taglibs:taglibs-standard-spec:1.2.5'
+  runtimeOnly 'org.apache.taglibs:taglibs-standard-impl:1.2.5'
+
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+  implementation 'mysql:mysql-connector-java:8.0.33'
+
+  implementation 'javax.servlet:jstl:1.2'
 }
 
 test {
