--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="4.0">
     <welcome-file-list>
 <!--        <welcome-file>user/Notification.jsp</welcome-file>-->
-        <welcome-file>view/Login.jsp</welcome-file>
+        <welcome-file>authenticate/Login.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
